--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,9 @@ build/*
 xcuserdata
 profile
 *.moved-aside
+
+amsip-phone/vbyantisip/vbyantisip/.DS_Store
+
+amsip-phone/vbyantisip/vbyantisip/vbyantisip/.DS_Store
+
+amsip-phone/vbyantisip/vbyantisip/vbyantisip/zh-Hant.lproj/.DS_Store
